%%{init: {
  "classDiagram": { "layout": "elk", "useMaxWidth": false },
  "elk": { "spacing": { "nodeNode": 30, "nodeNodeBetweenLayers": 30, "componentComponent": 20 } }
}}%%
classDiagram
direction TB

%% ==================== Namespace: Core Pipeline ====================
namespace CorePipeline {
  class Pipe {
    <<abstract>>
    +config: PipeConfig
    +process(ctx: PipeContext) PipeContext
    #_process()* PipeResult
    +have_dependent_pipes_been_run(ctx) bool
  }

  class CompositePipe {
    +_factory: RenderableFactory
    +_process_steps(ctx) list~PipeResult~
    +_build_pipe_from_step_config(cfg, ctx) Pipe
    +process(ctx) PipeContext
  }

  class PipeContext {
    +pipes: dict~str, PipeResult~
    +params: dict
    +has_succeeded(id: str) bool
  }

  class PipeResult {
    +success: bool
    +failed: bool
    +message: str
    +data: BaseModel
    +union(results) PipeResult
  }
}

%% ==================== Namespace: Configuration ====================
namespace Configuration {
  class PipeConfig {
    +id: str
    +use: str
    +params: BaseModel
    +if_: str | bool
    +depends_on: list~str~
    +steps: list~PipeConfig~
    +should_run: bool
  }

  class RenderableConfig {
    +uid: str
    +id: str
    +use: str
    +injects: dict~str, str~
    +params: BaseModel
  }

  class OrchestratorConfig {
    +defaults: dict
    +runners: list~RunnerDefinition~
  }

  class RunnerDefinition {
    +id: str
    +on: list~TriggerDefinition~
    +run: PipeConfig
    +params: RunnerParams
    +pipe_id: str
  }

  class TriggerDefinition {
    <<config>>
  }
}

%% ==================== Namespace: Factory & Rendering ====================
namespace FactoryRendering {
  class RenderableFactory {
    +create_pipe(cfg, scope) Pipe
    +create_trigger(def, scope) Trigger
    -__create_renderable_instance(cfg, scope) Renderable
  }

  class TemplateRenderer {
    <<abstract>>
    +render(template: str, ctx: dict) Any
    +render_recursive(obj, scope) Any
  }

  class Renderable {
    <<interface>>
  }
}

%% ==================== Namespace: Orchestration ====================
namespace Orchestration {
  class Orchestrator {
    -_pipe_factory: RenderableFactory
    -_config: OrchestratorConfig
    -_trigger_registry: dict~str, Trigger~
    -_runners: dict~str, PipeRunner~
    +start() void
    -_instantiate_trigger(def) Trigger
  }

  class PipeRunner {
    +definition: RunnerDefinition
    +pipe_factory: RenderableFactory
    +execute() void
    +on_trigger_fired() void
  }

  class Trigger {
    <<abstract>>
    +attach(observer: PipeRunner) void
    +notify() void
    +start() void
  }
}

%% ==================== Namespace: Ticket System ====================
namespace TicketSystem {
  class TicketSystemService {
    <<abstract>>
    +update_ticket(id, updates)* bool
    +find_tickets(criteria)* list~UnifiedTicket~
    +find_first_ticket(criteria)* UnifiedTicket
    +add_note(id, note)* bool
  }

  class UnifiedTicket {
    +id: str
    +subject: str
    +queue: UnifiedEntity
    +priority: UnifiedEntity
    +body: str
    +notes: list~UnifiedNote~
  }

  class UnifiedNote {
    +id: str
    +subject: str
    +body: str
  }

  class UnifiedEntity {
    +id: str
    +name: str
  }

  class TicketSearchCriteria {
    +queue: UnifiedEntity
    +limit: int
    +offset: int
  }
}

%% ==================== Namespace: Pipe Implementations ====================
namespace PipeImplementations {
  class UpdateTicketPipe {
    +ticket_system: TicketSystemService
    +pipe_config: UpdateTicketPipeConfig
    +_process() PipeResult
  }

  class FetchTicketsPipe {
    +ticket_system: TicketSystemService
    +_process() PipeResult
  }

  class AddNotePipe {
    +ticket_system: TicketSystemService
    +_process() PipeResult
  }
}

%% ==================== Relationships ====================

%% Core Pipeline Relationships
CorePipeline.CompositePipe --|> CorePipeline.Pipe : extends
PipeImplementations.UpdateTicketPipe --|> CorePipeline.Pipe : extends
PipeImplementations.FetchTicketsPipe --|> CorePipeline.Pipe : extends
PipeImplementations.AddNotePipe --|> CorePipeline.Pipe : extends

CorePipeline.Pipe ..|> FactoryRendering.Renderable : implements
CorePipeline.Pipe --> Configuration.PipeConfig : configured by
CorePipeline.Pipe --> CorePipeline.PipeContext : receives & updates
CorePipeline.Pipe --> CorePipeline.PipeResult : produces
CorePipeline.PipeContext --> CorePipeline.PipeResult : stores by id
CorePipeline.CompositePipe --> FactoryRendering.RenderableFactory : uses

%% Config Relationships
Configuration.PipeConfig --|> Configuration.RenderableConfig : extends
Configuration.RenderableConfig ..|> FactoryRendering.Renderable : configures

%% Factory & Rendering
FactoryRendering.RenderableFactory --> CorePipeline.Pipe : instantiates
FactoryRendering.RenderableFactory --> FactoryRendering.TemplateRenderer : renders with
FactoryRendering.RenderableFactory --> Orchestration.Trigger : creates

%% Orchestration
Orchestration.Orchestrator --> Configuration.OrchestratorConfig : configured by
Orchestration.Orchestrator --> Orchestration.PipeRunner : manages
Orchestration.Orchestrator --> FactoryRendering.RenderableFactory : uses
Orchestration.Orchestrator --> Orchestration.Trigger : instantiates
Orchestration.PipeRunner --> Configuration.RunnerDefinition : configured by
Orchestration.PipeRunner --> FactoryRendering.RenderableFactory : creates pipes with
Configuration.RunnerDefinition --> Configuration.PipeConfig : defines pipeline
Configuration.RunnerDefinition --> Configuration.TriggerDefinition : triggered by
Orchestration.Trigger --> Orchestration.PipeRunner : notifies

%% Ticket System
TicketSystem.TicketSystemService ..|> FactoryRendering.Renderable : implements
PipeImplementations.UpdateTicketPipe --> TicketSystem.TicketSystemService : uses
PipeImplementations.FetchTicketsPipe --> TicketSystem.TicketSystemService : uses
PipeImplementations.AddNotePipe --> TicketSystem.TicketSystemService : uses
TicketSystem.TicketSystemService --> TicketSystem.UnifiedTicket : works with
TicketSystem.TicketSystemService --> TicketSystem.UnifiedNote : works with
TicketSystem.TicketSystemService --> TicketSystem.TicketSearchCriteria : uses
TicketSystem.UnifiedTicket --> TicketSystem.UnifiedEntity : contains
TicketSystem.UnifiedTicket --> TicketSystem.UnifiedNote : contains

%% Styling
classDef abstractClass fill:#f9f,stroke:#333,stroke-width:2px
classDef configClass fill:#ffa,stroke:#333,stroke-width:1px
classDef interfaceClass fill:#aff,stroke:#333,stroke-width:1px

class CorePipeline.Pipe,TicketSystem.TicketSystemService,Orchestration.Trigger,FactoryRendering.Renderable,FactoryRendering.TemplateRenderer abstractClass
class Configuration.PipeConfig,Configuration.RenderableConfig,Configuration.OrchestratorConfig,Configuration.RunnerDefinition,Configuration.TriggerDefinition configClass
class FactoryRendering.Renderable interfaceClass
